Refactor project references from "Pandoras-Shell" to "itmcp" across configuration files, documentation, and source code; update logging and server initialization accordingly.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,10 @@
 [project]
-name = "Pandoras-Shell"
+name = "itmcp"
 version = "0.1.0"
 description = "MCP server enabling AI assistants to execute terminal commands through a secure shell interface"
 authors = [
-    {name = "Christian Hägg", email = "zelaron@gmail.com"}
+    {name = "Christian Hägg", email = "zelaron@gmail.com"},
+    {name = "Andrew Hopper"}
 ]
 license = "MIT"
 dependencies = [
